--- a/client/public/index.html
+++ b/client/public/index.html
@@ -7,9 +7,14 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Mindall - Encoding text using periodic table."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <meta
+      name="keywords"
+      content="миндаль, мендеелев, Менделеев, шифр, кодировка, cipher, periodic table, периодическая таблица"
+    />
+    <meta name="og:title" content="Миндаль" />
+    <meta name="og:description" content="Mindall - Encoding text using periodic table." />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +29,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Mindall App</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
