--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,7 +8,7 @@
         <meta name="description" content="Mindall - кодировка из текста в код на основе Таблицы Менделеева." />
         <meta name="keywords" content="миндаль, мендеелев, Менделеев, шифр, кодировка, cipher, periodic table, периодическая таблица" />
         <meta name="og:title" content="Миндаль" />
-        <meta name="og:description" content="Mindall - Таблицы Менделеева." />
+        <meta name="og:description" content="Mindall - кодировка из текста в код на основе Таблицы Менделеева." />
         <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
