Truly fix content size issue.

--- a/client/index.html
+++ b/client/index.html
@@ -4,8 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/logo.svg" />
-  <!-- <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no"> -->
-  <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+  <meta name="viewport" content="width=device-width, maximum-scale=1.0, user-scalable=no, interactive-widget=resizes-content ">
 
   <title>Mindall v3</title>
 </head>
